Adjusted gitignore to ignore less

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,8 @@ vignettes/*.pdf
 # R Environment Variables
 .Renviron
 
-raw_data/
+raw_data/gapminder/
+raw_data/IWF/
+raw_data/OurWorldInData/
 
 *.nb.html
