--- a/.gitignore
+++ b/.gitignore
@@ -39,10 +39,10 @@ vignettes/*.pdf
 .Renviron
 
 raw_data/
-raw_data/gapminder/
-raw_data/IWF/
-raw_data/OurWorldInData/
-raw_data/Map/
+# raw_data/gapminder/
+# raw_data/IWF/
+# raw_data/OurWorldInData/
+# raw_data/Map/
 
 images/
 
